--- a/thanhhoa.gov.vn/Content/news.css
+++ b/thanhhoa.gov.vn/Content/news.css
@@ -424,6 +424,10 @@
     display: inline-block;
 }
 
+.inp_error{
+    border: 1px solid #ff5f5f;
+}
+
 /*#############################################*/
 /*                END right news               */
 /*#############################################*/
