--- a/thanhhoa.gov.vn/Views/TestScore/ViewerImages.cshtml
+++ b/thanhhoa.gov.vn/Views/TestScore/ViewerImages.cshtml
@@ -40,7 +40,7 @@
                 }
             }
             
-            <a id="lnkbackpage" onclick="history.go(-1);"><img src="/Images/restore.gif" onclick="history.go(-1);" style="cursor:pointer; border=0">&nbsp;Trở về trang trước</a>
+            <a id="lnkbackpage" href="http://fit.nuce.edu.vn/testscore/index"><img src="/Images/restore.gif" style="cursor:pointer; border=0">&nbsp;Trở về trang trước</a>
         </div>
     </div>
     @Html.Partial("_PartialLeft")
