--- a/thanhhoa.gov.vn/Areas/Admin/Views/Testscore/Regist.cshtml
+++ b/thanhhoa.gov.vn/Areas/Admin/Views/Testscore/Regist.cshtml
@@ -92,11 +92,11 @@
                                 </div>
                                 <div class="form-group m-b-xs">
                                     <span class="col-lg-2 control-span m-l">
-                                        File đính kèm <font color="red">*</font> :
+                                        File đính kèm <font color="red">*</font> : <br/> (<strong>Lưu ý: </strong><font color="red"> Có thể chọn nhiều file</font>)
                                     </span>
                                     <div class="col-lg-6">
                                         <input type="file" name="files" id="files" multiple data-required="true"
-                                               data-required-message="Trường tên môn học không được để trống" />
+                                               data-required-message="File không được để trống" />
                                     </div>
                                 </div>
                                 <div class="form-group m-b-xs">
