--- a/thanhhoa.gov.vn/Views/TestScore/Index.cshtml
+++ b/thanhhoa.gov.vn/Views/TestScore/Index.cshtml
@@ -21,7 +21,7 @@
             <div class="updateActi" style="margin-bottom: 15px;"></div>
             <form id="form1" name="form" action="index" method="post">
                 <input type="hidden" name="direction" />
-                <input type="hidden" name="page" />
+                <input type="hidden" name="page" value="@lstTestscore.Page" />
                 <div class="boxS2">
                     <div class="topbox">
                         <div class="borderleft">
